# ollama_llm_local

./: .gitignore  README.md  pyproject.toml
LocalAiAgentWithRag/: main.py
LocalLLMtest/: package.py  sample_request.py
LocalMAtest/prompts/: general_agent.txt
