[tool.poetry]
name = "ollamatutorial"
version = "0.1.0"
description = ""
authors = ["Camille Brodin <camillebrodin@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
langchain = "^1.2.3"
langchain-ollama = "^1.0.1"
langchain-chroma = "^1.1.0"
pandas = "^2.3.3"
langchain-core = "^1.2.6"
datasets = "^4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
